--- a/examples/product-by-handle/index.ejs
+++ b/examples/product-by-handle/index.ejs
@@ -4,6 +4,7 @@
   <title>Product by Handle Example</title>
 </head>
 <body>
+<h1>Basic Example: ProductByHandle Component</h1>
 <div id="root"></div>
 </body>
 </html>
