--- a/examples/use-with-context/index.ejs
+++ b/examples/use-with-context/index.ejs
@@ -4,6 +4,7 @@
   <title>Product by Handle Example</title>
 </head>
 <body>
+<h1>Use with Context</h1>
 <div id="root"></div>
-<script type="text/javascript" src="/bundle.js"></script></body>
+</body>
 </html>
